--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: bokov@uthscsa.edu
   facebook:
   flickr:
-  github: bokov/kl2_kc_analysis
+  github: bokov/kl2_kc_analysis/tree/integration
   instagram: 
   linkedin: alex-bokov-32393a91
   pinterest:
