Testing out multiple github links

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ footer-links:
   email: bokov@uthscsa.edu
   facebook:
   flickr:
+  github: UTHSCSA-CIRD/
   github: bokov/kl2_kc_analysis/tree/integration
   instagram: 
   linkedin: alex-bokov-32393a91
